welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:8: error: not found: value i
        while (i != nbPas) {recule()}
               ^