welcome.lessons.welcome.methods.basics.Methods.scala.code
     var nbPas:Int = 0
     
        def goAndGet() {
        while (!estSurBiscuit) {avance()
        nbPas=nbPas+1}
        prendBiscuit()
        while (i != nbPas) {recule()}
        poseBiscuit()
        }

        for (i <- 1 to 7) {
            goAndGet();
            right();
            forward();
            left();
        }
